Change overflow-x on equations to auto to prevent empty scroll bars again?

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -153,4 +153,5 @@ table {
 
 mjx-container {
   overflow-x: auto;
+  overflow-y: hidden;
 }
